<resources>
    <string name="app_name">Stone</string>
    <string name="index_first">1st</string>
    <string name="index_second">2nd</string>
    <string name="index_third">3rd</string>
    <string name="accessibility_service_label">Stone</string>
    <string name="accessibility_service_description">turn on accessibility service to enable powerful service</string>
    <string name="ok_string">OK</string>
    <string name="null_string" translatable="false" />
    <string name="uninstalled_app">Uninstalled App</string>
    <string name="force_stop_button">Force Stop</string>"

    <string name="sample_device_admin">sample device</string>
    <string name="sample_device_admin_description">sample device admin description</string>
    <string name="device_admin_button">Device Admin</string>
    <string name="start_fragment_test">Fragment Test</string>
    <string name="text_running_app">Running Apps</string>
    <string name="start_anim_activity">Animation Test</string>
    <string name="start_test_activity">Activity Test</string>
    <string name="start_custom_view">Custom View Activity</string>
    <string name="start_app_signature">Application Signature</string>
    <string name="start_scroll_activity">Activity Scroll</string>
    <string name="start_content_test">Test Content Provider</string>
    <string name="start_access_notify_setting">Access Notify Setting</string>
    <string name="start_test_notify_clone">Notify display</string>
    <string name="start_test_send_notify">Send Notify</string>
    <string name="start_power_security_detail">Power Security</string>
    <string name="text_upload_image">Upload Image</string>
    <string name="text_download_image">Download Image</string>
    <string name="text_pick_image">Pick Image</string>
    <string name="text_start_test">Start Test</string>
    <string name="text_alarm_test">Alarm Test</string>
    <string name="text_foreground_test">Foreground Test</string>
    <string name="text_call_test">Call Test</string>
    <string name="text_request_permission">Request Permissions</string>
    <string name="text_install_test">Install Test</string>
    <string name="text_activity_task">Activity Task</string>
    <string name="text_download_test">Download Test</string>
    <string name="text_file_manage">File Manage</string>
    <string name="text_on_new_intent">onNewIntent Test</string>
    <string name="text_file_observer">File Observer</string>
    <string name="text_video_play">Video Play</string>

    <string name="admin_receiver_status">Receiver Status: %s</string>
    <string name="admin_receiver_status_enabled">Admin Receiver Enabled</string>
    <string name="admin_receiver_status_disable_warning">Admin Receiver Status Warn</string>
    <string name="admin_receiver_status_disabled">Admin Receiver Disabled</string>
    <string name="admin_receiver_status_pw_changed">Admin Receiver Password Changed</string>

    <string name="reset_button">Reset</string>
    <string name="activity_notify_title">Notify Activity</string>

    <string name="Roboto_Regular">sans-serif</string>
    <string name="notify_boost_title">Background apps lower speed</string>
    <string name="notify_boost_content">&lt;font color=&quot;#E54646&quot;&gt;%1$s&lt;/font&gt; app(s) can be kill to boost</string>
    <string name="boost_do_boost">Boost</string>

    <string name="system_activity_404_tips">Sorry, we can\'t find right setting options in your device, we will try to fix it.</string>
    <string name="quit">Quit</string>
    <string name="settings">Settings</string>

    <string name="file_observer_start_watching">start watching</string>
    <string name="file_observer_stop_watching">stop watching</string>

    <string name="text_launch">Launch</string>
</resources>
