<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linear_layout_app_item"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/app_item_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/null_string"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_marginLeft="16dp"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/app_item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:maxWidth="150dp"
                android:text="Google Play"
                android:fontFamily="Roboto-Regular"
                android:textColor="#FF575757"
                android:textSize="14dp" />
            <TextView
                android:id="@+id/app_package_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:padding="4dp"
            android:fontFamily="@string/Roboto_Regular"
            android:background="@color/color_FF15CF60"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:text="@string/text_launch"/>
    </LinearLayout>
</LinearLayout>